Add more sample example for multiple permission and compose

--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="dev.shreyaspatil.permissionFlow.example.ui.ContactsActivity">
+    tools:context="dev.shreyaspatil.permissionFlow.example.ui.contacts.ContactsActivity">
 
     <TextView
         android:id="@+id/permissionStatusText"
